@@ -999,3 +999,22 @@ int normalise_path_inplace(unsigned char *input, int input_len, int win) {
 
     return count;
 }
+
+char *modsec_build(apr_pool_t *mp) {
+    int build_type = 0;
+    int i;
+
+    for (i = 0; modsec_build_type[i].name != NULL; i++) {
+        if (strcmp(MODSEC_VERSION_TYPE, modsec_build_type[i].name) == 0) {
+            build_type = modsec_build_type[i].val;
+            break;
+        }
+    }
+
+    return apr_psprintf(mp, "%02i%02i%02i%1i%02i",
+                            atoi(MODSEC_VERSION_MAJOR),
+                            atoi(MODSEC_VERSION_MINOR),
+                            atoi(MODSEC_VERSION_MAINT),
+                            build_type,
+                            atoi(MODSEC_VERSION_RELEASE));
+}
